kubernetes/xbid/overlays/testnet/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: xbid-testnet
  labels:
    app.kubernetes.io/part-of: xbid
    xbid.live/environment: testnet
