kubernetes/xbid/overlays/testnet/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xbid-frontend
  annotations:
    cert-manager.io/cluster-issuer: wechart
    nginx.ingress.kubernetes.io/proxy-body-size: 3m
spec:
  ingressClassName: nginx
  tls:
    - hosts: [testnet.xbid.live]
      secretName: xbid-testnet-web-tls
  rules:
    - host: testnet.xbid.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xbid-frontend
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xbid-backend
  annotations:
    cert-manager.io/cluster-issuer: wechart
    nginx.ingress.kubernetes.io/proxy-body-size: 3m
spec:
  ingressClassName: nginx
  tls:
    - hosts: [api.testnet.xbid.live]
      secretName: xbid-testnet-api-tls
  rules:
    - host: api.testnet.xbid.live
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xbid-backend
                port:
                  name: http
